Компонент help-accordion десктоп

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"dependencies": {
 		"@babel/polyfill": "^7.12.1",
 		"animejs": "^3.2.1",
-		"jquery": "^3.6.0"
+		"jquery": "^3.6.0",
+		"core-js": "^3.24.0"
 	}
 }
