--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
 	"name": "petukhov",
-	"version": "0.0.1",
-	"homepage": "",
-	"author": "",
+	"version": "1.0.0",
+	"description": "",
 	"scripts": {
 		"major": "gulp bump --type=major && gulp build --production",
 		"minor": "gulp bump --type=minor && gulp build --production",
 		"patch": "gulp bump --type=patch && gulp build --production",
 		"publish": "gulp build --production",
-		"start": "gulp"
+		"start": "npx @11ty/eleventy --serve & gulp"
+	},
+	"dependencies": {
+		"@babel/polyfill": "^7.12.1",
+		"animejs": "^3.2.1",
+		"jquery": "^3.6.0",
+		"core-js": "^3.24.0"
 	},
 	"devDependencies": {
+		"@11ty/eleventy": "^1.0.2",
+		"@11ty/eleventy-navigation": "^0.3.5",
 		"@babel/preset-env": "^7.16.8",
 		"babel-core": "^6.26.3",
 		"babel-loader": "^8.2.3",
-		"browser-sync": "^2.27.9",
 		"del": "^6.0.0",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^8.0.0",
@@ -29,17 +35,13 @@
 		"gulp-plumber": "^1.2.1",
 		"gulp-rename": "^2.0.0",
 		"gulp-replace": "^1.1.3",
-		"gulp-rigger": "^0.5.8",
 		"gulp-sass": "^5.1.0",
 		"gulp-uglify": "^3.0.2",
 		"sass": "^1.45.2",
 		"webpack-stream": "^7.0.0",
 		"yargs": "^17.4.1"
 	},
-	"dependencies": {
-		"@babel/polyfill": "^7.12.1",
-		"animejs": "^3.2.1",
-		"jquery": "^3.6.0",
-		"core-js": "^3.24.0"
-	}
+	"keywords": [],
+	"author": "",
+	"homepage": ""
 }
