--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"@babel/polyfill": "^7.12.1",
 		"animejs": "^3.2.1",
 		"core-js": "^3.24.0",
-		"jquery": "^3.6.0"
+		"jquery": "^3.6.0",
+		"hamburgers": "^1.2.1"
 	},
 	"devDependencies": {
 		"@11ty/eleventy": "^1.0.2",
