--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 	"dependencies": {
 		"@babel/polyfill": "^7.12.1",
 		"animejs": "^3.2.1",
+		"clipboard": "^2.0.11",
 		"core-js": "^3.24.0",
-		"jquery": "^3.6.0",
-		"hamburgers": "^1.2.1"
+		"hamburgers": "^1.2.1",
+		"jquery": "^3.6.0"
 	},
 	"devDependencies": {
 		"@11ty/eleventy": "^1.0.2",
